# kmetbench-release

./: LICENSE  README.md  VERSIONS.md  pyproject.toml  requirements-eval.txt
configs/models/: README.md
configs/models/api/: gemini-3-pro-preview.yaml  google_gemini-2.5-pro.yaml  gpt-5.2.yaml
configs/models/hf/: meta-llama_Llama-3.2-90B-Vision-Instruct.yaml  skt_A.X-4.0-VL-Light.yaml
configs/models/vllm/: CohereLabs_c4ai-command-a-03-2025.yaml  CohereLabs_command-a-reasoning-08-2025.yaml  LGAI-EXAONE_EXAONE-4.0-1.2B.yaml  LGAI-EXAONE_EXAONE-4.0-32B.yaml  LGAI-EXAONE_EXAONE-4.5-33B.yaml  NCSOFT_VARCO-VISION-2.0-1.7B.yaml  NCSOFT_VARCO-VISION-2.0-14B.yaml  OpenGVLab_InternVL3_5-14B-Instruct.yaml  OpenGVLab_InternVL3_5-1B-Instruct.yaml  OpenGVLab_InternVL3_5-2B-Instruct.yaml  OpenGVLab_InternVL3_5-38B-Instruct.yaml  OpenGVLab_InternVL3_5-4B-Instruct.yaml  OpenGVLab_InternVL3_5-8B-Instruct.yaml  Qwen_QVQ-72B-Preview.yaml  Qwen_Qwen2.5-VL-32B-Instruct.yaml  Qwen_Qwen2.5-VL-3B-Instruct.yaml  Qwen_Qwen3-0.6B.yaml  (+40 more)
scripts/: eval.py
scripts/eval/: eval_chatgpt.py  eval_chatgpt_thinking.py  eval_openai_compatible.py  eval_reasoning_judge.py  eval_transformers.py
scripts/setup/: download_hf_model.py  env_doctor.py  install_repo_identity_guards.sh  install_uv_profile.sh  serve_vllm_for_kmetbench.sh
src/: model_catalog.py
src/eval/: __init__.py  api_clients.py  config.py  data.py  judge.py  messages.py  model_configs.py  model_registry.py  models.py  parsing.py  pipeline.py  prompts.py  public_protocol.py  runners.py  transformers_utils.py
src/utils/: repo_layout.py
