[project]
name = "kmetbench-release"
version = "0.1.0"
description = "Public evaluation toolkit for K-MetBench."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
transformers = [
    "accelerate>=1.6.0",
    "huggingface-hub>=0.34.0",
    "Pillow>=10.0.0",
    "torch>=2.6.0",
    "transformers>=4.52.0",
]
private-compat = [
    "google-genai>=1.73.0",
]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false
